--- a/references.bib
+++ b/references.bib
@@ -575,3 +575,18 @@ abstract = {  The multiple regression equation predicting lung function values f
 	url = {http://dx.doi.org/10.1001/archpedi.154.2.155},
 	langid = {en}
 }
+
+@article{Rothman2005,
+	title = {Causation and Causal Inference in Epidemiology},
+	author = {Rothman, Kenneth J. and Greenland, Sander},
+	year = {2005},
+	month = {07},
+	date = {2005-07},
+	journal = {American Journal of Public Health},
+	pages = {S144--S150},
+	volume = {95},
+	number = {S1},
+	doi = {10.2105/ajph.2004.059204},
+	url = {http://dx.doi.org/10.2105/AJPH.2004.059204},
+	langid = {en}
+}
