--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -581,15 +581,19 @@ From the base reference population to the most restrictive, the number of includ
 
 In the baseline reference population, average FEV~1~ and FVC were 350.5 mL and 418.4 mL higher in White youths compared with Black youths, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 502.6 mL for FEV~1~ and 686.5 mL for FVC. After excluding those with unfavorable SDoH, the racial gap in FEV~1~ and FVC was reduced by 86.9 mL (24.8%) and 109.6 mL (26.2%) in youths and 132.2 mL (26.3%) and 132.9 mL (19.4%) in adults, respectively (@fig-racialgap).
 
+#### Mexican Americans
+
+Average FEV~1~ and FVC were 56.3 mL and 34.7 mL higher in Mexican American youths compared to White youths, after adjusting for age, height, and biological sex at birth. Mexican American and White adults had similar adjusted FEV~1~ and FVC at baseline, with differences smaller than 6 mL (@suppfig-Mexican). Excluding individuals with unfavorable SDoH resulted in higher FEV~1~ and FVC values for the Mexican American population compared to the White population. Adjusted average FEV~1~ and FVC values for Mexican American youths increased by 38.0 mL (67.5%) and 28.2 mL (81.3%) higher than White youths. For adults, average FEV~1~ and FVC increased by 33.8 mL and 35.6 mL compared to White adults (@suppfig-Mexican).
+
+#### Non-Mexican Hispanic Americans
+
+In the baseline reference population, average FEV~1~ and FVC were 65.9 mL and 99.1 mL higher in White youths compared with Non-Mexican Hispanic youths youths, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 67.8 mL for FEV~1~ and 117.3 mL for FVC. After excluding those with unfavorable SDoH, the racial gap in FEV~1~ and FVC was reduced by 10.0 mL (15.2%) and 19.2 mL (19.3%) in youths and 58.2 mL (85.9%) and 14.5 mL (12.4%) in adults, respectively (@suppfig-hispanic) .
+
 #### Asian Americans
 
 In the baseline reference population, average FEV~1~ and FVC were 183.8 mL and 307.2 mL higher in White youths compared with Asian youths, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 367.5 mL for FEV~1~ and 500.1 mL for FVC. After excluding those with unfavorable SDoH, the racial gap in FEV~1~ and FVC was reduced by 12.1 mL (6.6%) and 38.5 mL (12.5%) in youths but increased by 51.8 mL (14.1%) and 55.6 mL (11.1%) in adults (@suppfig-Asian).
 
-#### Mexican Americans
-
-Average FEV~1~ and FVC were 56.3 mL and 34.7 mL higher in Mexican American youths compared to White youths, after adjusting for age, height, and biological sex at birth. Mexican American and White adults had similar adjusted FEV~1~ and FVC at baseline, with differences smaller than 6 mL (@suppfig-Mexican). Excluding individuals with unfavorable SDoH resulted in higher FEV~1~ and FVC values for the Mexican American population compared to the White population. Adjusted average FEV~1~ and FVC values for Mexican American youths increased by 38.0 mL and 28.2 mL higher than White youths. For adults, average FEV~1~ and FVC increased by 33.8 mL and 35.6 mL compared to White adults (@suppfig-Mexican).
-
-The appendix includes additional results for the non-Mexican Hispanic (@suppfig-hispanic) and Other/Multiracial populations. (@suppfig-Other).
+The appendix includes additional results for Other/Multiracial (@suppfig-Other).
 
 ### Secondary and Sensitivity Analyses
 
@@ -1101,6 +1105,14 @@ plot_racial_gap_change(createCohort3Factor("adult"), createCohort3Factor("youth"
 
 ```
 
+| Col1 | Col2 | Col3 |
+|------|------|------|
+|      |      |      |
+|      |      |      |
+|      |      |      |
+
+: Changes in Racial Gaps in Lung Function After Excluding Participants with Unfavorable Social Determinants of Health {#tbl-results}
+
 ## References
 
 ::: {#refs}
@@ -1230,21 +1242,6 @@ Characteristics of Black Participants Included in the Baseline Reference Populat
 
 ### Other Race Groups
 
-::: {#suppfig-Asian}
-```{r, message=F, warning=F}
-refs_adult_asian <- createCohort("adult", includedRace=c(3,6))
-message("Adult counts:")
-message(map_df(refs_adult_asian, count))
-
-refs_youth_asian <- createCohort("youth", includedRace=c(3,6))
-message("Youth counts:")
-message(map_df(refs_youth_asian, count))
-
-plot_racial_gap_change(refs_adult_asian, refs_youth_asian, includedRace=c(3,6))
-```
-
-Changes in lung function racial gaps between Asian and Non-Hispanic White participants in successively more restrictive reference populations. Lung function differences are adjusted for height, age, and biological sex at birth. Positive values indicate higher lung function in the Non-Hispanic White population.
-:::
 
 ::: {#suppfig-Mexican}
 Mexican American vs. White
@@ -1281,6 +1278,22 @@ plot_racial_gap_change(refs_adult_hisp, refs_youth_hisp, includedRace=c(3,2))
 ```
 
 Changes in lung function racial gaps between Other Hispanic and Non-Hispanic White participants in successively more restrictive reference populations. Lung function differences are adjusted for height, age, and biological sex at birth. Positive values indicate higher lung function in the Non-Hispanic White population.
+:::
+
+::: {#suppfig-Asian}
+```{r, message=F, warning=F}
+refs_adult_asian <- createCohort("adult", includedRace=c(3,6))
+message("Adult counts:")
+message(map_df(refs_adult_asian, count))
+
+refs_youth_asian <- createCohort("youth", includedRace=c(3,6))
+message("Youth counts:")
+message(map_df(refs_youth_asian, count))
+
+plot_racial_gap_change(refs_adult_asian, refs_youth_asian, includedRace=c(3,6))
+```
+
+Changes in lung function racial gaps between Asian and Non-Hispanic White participants in successively more restrictive reference populations. Lung function differences are adjusted for height, age, and biological sex at birth. Positive values indicate higher lung function in the Non-Hispanic White population.
 :::
 
 ::: {#suppfig-Other}
